--- a/chat_app/templates/index.html
+++ b/chat_app/templates/index.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chat App</title>
-</head>
-<body>
-    <h1>My Chat App</h1>
-    <h3>Hi {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Guest{% endif %}!</h3>
-    <ul>
-        {% for room in rooms %}
-            <li><a href="/rooms/{{ room._id.room_id }}">{{ room.room_name }}</a></li>
-        {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+Dashboard
+{% endblock %}
+
+{% block main %}
+
+<h3>Hi {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Guest{% endif %}!</h3>
+{% if message %}
+<div class="alert alert-danger" role="alert">
+  {{message}}
+</div>
+{% endif %}
+<ul>
+    {% for room in rooms %}
+        <li><a href="/rooms/{{ room._id.room_id }}">{{ room.room_name }}</a></li>
+    {% endfor %}
+</ul>
+
+{% endblock %}
