--- a/chat_app/templates/signup.html
+++ b/chat_app/templates/signup.html
@@ -1,23 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Chat App</title>
-</head>
-<body>
-<h1>SignUp</h1>
-<h3>{{ message }}</h3>
-<form method="post" action="/signup">
-    <label>Username:</label>
-    <input type="text" name="username">
-    <br>
-    <label>Email:</label>
-    <input type="email" name="email">
-    <br>
-    <label>Password:</label>
-    <input type="password" name="password">
-    <br>
-    <button type="submit">Submit</button>
-</form>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block title %}
+Register
+{% endblock %}
+
+{% block main %}
+<!-- Register form -->
+
+<div class="container text-center">
+  <h1 class="text-primary mb-4">Create Account</h1>
+  <div class="mx-auto form-container">
+    {% if message %}
+    <div class="alert alert-danger" role="alert">
+      {{message}}
+    </div>
+    {% endif %}
+    <form action="{{ url_for("auth.signup") }}" method="post" accept-charset="utf-8">
+      <p class="text-muted"><small>Fields marked with asterisk (*) are required</small></p>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email Address*</label>
+        <input autofocus type="text" class="form-control" id="email" name="email">
+      </div>
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" name="username">
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password*</label>
+        <input type="password" class="form-control" id="password" name="password">
+      </div>
+      <div class="d-flex d-md-block ">
+        <button type="submit" class="btn btn-primary flex-grow-1">Register</button>
+      </div>
+    </form>
+  </div>
+  <div>
+    For Login <a href="/login">Click Here</a>
+  </div>
+</div>
+
+{% endblock %}
