--- a/chat_app/templates/view_room.html
+++ b/chat_app/templates/view_room.html
@@ -33,7 +33,7 @@ Live chat
 </div>
 
 <script>
-  const socket = io.connect("https://flask-chat-t2x8.onrender.com");
+  const socket = io.connect("http://localhost:5000");
 
   const form = document.getElementById("form");
   const input = document.getElementById("input");
