--- a/chat_app/templates/edit_room.html
+++ b/chat_app/templates/edit_room.html
@@ -9,7 +9,12 @@ Create Room
 <!-- Create room form -->
 <div class="card create-room-container mx-auto p-2">
   <div class="card-body">
-    <h1 class="h2 card-title text-primary mb-4">Create Room <i class="mx-2 fa-solid fa-people-roof"></i></h1>
+    <h1 class="h2 card-title text-primary mb-4">Edit Room<i class="mx-2 fa-solid fa-people-roof"></i></h1>
+    {% if message %}
+    <div class="alert alert-success" role="alert">
+      {{message}}
+    </div>
+    {% endif %}
     <form action="/rooms/{{ room['_id'] }}/edit" method="post" accept-charset="utf-8">
       <div class="row mb-3">
         <label for="room_name" class="col-sm-3 col-form-label">Room Name</label>
@@ -31,11 +36,10 @@ Create Room
             {% endfor %}
         </div>
         <div class="col-sm-9">
-
       </div>
 
       <div class="d-flex d-md-block ">
-        <button type="submit" class="btn btn-primary flex-grow-1">Create</button>
+        <button type="submit" class="btn btn-primary flex-grow-1">Edit</button>
       </div>
     </form>
   </div>
